# lotus

./: README.md  build.sh  clean.sh  code style.md  meson.build  meson_options.txt  x86_64-elf.ini
src/: kernel.c  linker.ld  meson.build
src/arch/: arch.h  meson.build
src/arch/x86_64/: arch.c  meson.build
src/arch/x86_64/devices/: meson.build
src/arch/x86_64/devices/ps2/: meson.build
src/arch/x86_64/devices/vga/: meson.build  vga.c
src/arch/x86_64/drivers/: meson.build
src/arch/x86_64/drivers/ps2/: meson.build  ps2.h
src/arch/x86_64/drivers/vga/: meson.build  vga.c  vga.h
src/arch/x86_64/gdt/: gdt.c  gdt.h  meson.build
src/arch/x86_64/interrupts/: idt.c  idt.h  interrupts.asm  interrupts.s  isr.c  isr.h  meson.build  type.h
src/arch/x86_64/libk/: meson.build  screen.c
src/arch/x86_64/utils/: cpu.c  cpu.h  meson.build
src/boot/stivale/: stivale.h
src/libc/: meson.build  stdlib.h
src/libc/stdlib/: memcpy.c  meson.build
src/libk/: keyboard.h  kmalloc.c  kprintf.c  libk.h  meson.build  panic.c  screen.h
src/mm/: meson.build  mm.h  pmm.c
src/utils/: bits.c  bits.h  meson.build  spinlock.h
subprojects/: mlibc.wrap  printf.wrap
